<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable name="school" type="com.example.dgjung_nycschools.data.School"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_back"
            android:onClick="onBtnBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvTitle"
            style="@style/activity_title"
            android:text="@{school.school_name}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/scollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/divider_h"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/group_layout"
                    android:visibility="@{school.sat_total() == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:id="@+id/tvScoresTitle"
                        style="@style/group_title"
                        android:text="SAT SCORES"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/layoutReading"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <LinearLayout
                        android:id="@+id/layoutReading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvScoresTitle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/layoutMath">

                        <TextView
                            style="@style/field_title"
                            android:text="@string/tag_sat_reading_score" />

                        <TextView
                            style="@style/field_content"
                            android:layout_margin="0dp"
                            android:text="@{school.sat_critical_reading_avg_score}" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutMath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintTop_toTopOf="@+id/layoutReading"
                        app:layout_constraintBottom_toBottomOf="@+id/layoutReading"
                        app:layout_constraintStart_toEndOf="@+id/layoutReading"
                        app:layout_constraintEnd_toStartOf="@+id/layoutWritting">

                        <TextView
                            style="@style/field_title"
                            android:text="@string/tag_sat_math_score" />

                        <TextView
                            style="@style/field_content"
                            android:layout_margin="0dp"
                            android:text="@{school.sat_math_avg_score}" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutWritting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintTop_toTopOf="@+id/layoutReading"
                        app:layout_constraintBottom_toBottomOf="@+id/layoutReading"
                        app:layout_constraintStart_toEndOf="@+id/layoutMath"
                        app:layout_constraintEnd_toStartOf="@+id/layoutTotal">

                        <TextView
                            style="@style/field_title"
                            android:text="@string/tag_sat_writing_score" />

                        <TextView
                            style="@style/field_content"
                            android:layout_margin="0dp"
                            android:text="@{school.sat_writing_avg_score}" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintTop_toTopOf="@+id/layoutReading"
                        app:layout_constraintBottom_toBottomOf="@+id/layoutReading"
                        app:layout_constraintStart_toEndOf="@+id/layoutWritting"
                        app:layout_constraintEnd_toStartOf="@+id/layoutTestTakers">

                        <TextView
                            style="@style/field_title"
                            android:text="@string/tag_sat_total" />

                        <TextView
                            style="@style/field_content"
                            android:layout_margin="0dp"
                            android:text="@{school.sat_total()}" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutTestTakers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintTop_toTopOf="@+id/layoutReading"
                        app:layout_constraintBottom_toBottomOf="@+id/layoutReading"
                        app:layout_constraintStart_toEndOf="@+id/layoutTotal"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            style="@style/field_title"
                            android:text="@string/tag_sat_test_takers" />

                        <TextView
                            style="@style/field_content"
                            android:layout_margin="0dp"
                            android:text="@{school.num_of_sat_test_takers}" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    style="@style/divider_h"/>

                <LinearLayout
                    style="@style/field_layout">

                    <TextView
                        style="@style/field_title"
                        android:text="@string/tag_location" />

                    <TextView
                        style="@style/field_content"
                        android:text="@{school.location}" />

                </LinearLayout>

                <LinearLayout
                    style="@style/field_layout">

                    <TextView
                        style="@style/field_title"
                        android:text="@string/tag_phonenumber" />

                    <TextView
                        style="@style/field_content"
                        android:text="@{school.phone_number}" />

                </LinearLayout>

                <LinearLayout
                    style="@style/field_layout">

                    <TextView
                        style="@style/field_title"
                        android:text="@string/tag_faxnumber" />

                    <TextView
                        style="@style/field_content"
                        android:text="@{school.fax_number}" />

                </LinearLayout>

                <LinearLayout
                    style="@style/field_layout">

                    <TextView
                        style="@style/field_title"
                        android:text="@string/tag_schoolemail" />

                    <TextView
                        style="@style/field_content"
                        android:text="@{school.school_email}" />

                </LinearLayout>

                <LinearLayout
                    style="@style/field_layout">

                    <TextView
                        style="@style/field_title"
                        android:text="@string/tag_website" />

                    <TextView
                        style="@style/field_content"
                        android:text="@{school.website}" />

                </LinearLayout>

                <LinearLayout
                    style="@style/field_layout">

                    <TextView
                        style="@style/field_title"
                        android:text="@string/tag_overview" />

                    <TextView
                        style="@style/field_content"
                        android:text="@{school.overview_paragraph}" />

                </LinearLayout>

                <LinearLayout
                    style="@style/field_list_layout"
                    android:visibility="@{school.academicopportunities1 == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        style="@style/field_title"
                        android:text="@string/tag_academicopportunities" />

                    <TextView
                        android:id="@+id/tvAcademicopportunities"
                        style="@style/field_content" />

                </LinearLayout>

                <LinearLayout
                    style="@style/field_list_layout"
                    android:visibility="@{school.prgdesc1 == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        style="@style/field_title"
                        android:text="@string/tag_prgdesc" />

                    <TextView
                        android:id="@+id/tvPrgdesc"
                        style="@style/field_content" />

                </LinearLayout>

                <LinearLayout
                    style="@style/field_list_layout"
                    android:visibility="@{school.directions1 == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        style="@style/field_title"
                        android:text="@string/tag_directions" />

                    <TextView
                        android:id="@+id/tvDirections"
                        style="@style/field_content" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>